[package]
name = "pvzscripts-rs"
version = "0.1.0"
edition = "2024"

[dependencies]

[dependencies.windows]
version = "0.61.3"
features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_WindowsProgramming",
    "Win32_System_ProcessStatus",
    "Win32_System_Diagnostics_Debug"
]
